--- a/src/graphics/reader/reader.graphic.css
+++ b/src/graphics/reader/reader.graphic.css
@@ -127,6 +127,11 @@ h2 {
     margin: 0.25em 0;
 }
 
+#settings #dropdown h6 {
+    margin-bottom: 0;
+    margin-top: 0.5em;
+}
+
 .btn-primary {
     --bs-btn-disabled-border-color: gray !important;
     --bs-btn-disabled-bg: gray !important;
