--- a/src/graphics/components/bar.scss
+++ b/src/graphics/components/bar.scss
@@ -10,9 +10,14 @@
     align-items: center;
 
     background-color: #351344;
-}
 
-.bar>* {
-    margin-bottom: 0;
-    margin-top: 0;
+    &>* {
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+
+    & .logo {
+        height: 100%;
+        padding: 10px;
+    }
 }
