--- a/src/graphics/components/bar.scss
+++ b/src/graphics/components/bar.scss
@@ -8,8 +8,14 @@
 
     display: flex;
     align-items: center;
+    gap: 15px;
+
+    padding-left: 10px;
 
     background-color: #351344;
+    font-size: 36px;
+
+    --bs-border-color: var(--bs-emphasis-color);
 
     &>* {
         margin-bottom: 0;
@@ -18,6 +24,20 @@
 
     & .logo {
         height: 100%;
-        padding: 10px;
+        padding: 10px 0;
+    }
+
+    & h2 {
+        font-weight: bold;
+        color: var(--bs-emphasis-color);
+    }
+
+    & .vr {
+        width: var(--bs-border-width);
+        height: 70%;
+        background-color: var(--bs-border-color);
+        opacity: 1;
+        align-self: unset;
+        margin: 0 5px;
     }
 }
