Moving between pools working properly

--- a/src/dashboard/announcements/components/announcement.scss
+++ b/src/dashboard/announcements/components/announcement.scss
@@ -34,3 +34,7 @@ svg {
     border-color: var(--bs-btn-disabled-border-color) !important;
     opacity: var(--bs-btn-disabled-opacity) !important;
 }
+
+.pool {
+    min-height: 5em;
+}
