--- a/src/dashboard/announcements/components/announcement.scss
+++ b/src/dashboard/announcements/components/announcement.scss
@@ -73,3 +73,45 @@ input.editable {
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.addBtn {
+    width: 100%;
+    height: 0.5em;
+
+    position: absolute;
+    bottom: -0.75em;
+    left: 0;
+    z-index: 1000;
+
+    cursor: pointer;
+    cursor: copy;
+
+    & .addIcon {
+        visibility: hidden;
+        position: absolute;
+        width: 50%;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+.addBtn:hover .addIcon {
+    visibility: visible;
+}
+
+@keyframes vert {
+    0% {
+        max-height: 0;
+    }
+
+    100% {
+        max-height: 5em;
+    }
+}
+
+.announcement {
+    animation-name: vert;
+    animation-duration: 0.15s;
+    animation-iteration-count: 1;
+}
