Add delete icon & fix dup ids

--- a/src/dashboard/announcements/components/announcement.scss
+++ b/src/dashboard/announcements/components/announcement.scss
@@ -116,3 +116,27 @@ input.editable {
     animation-duration: 0.15s;
     animation-iteration-count: 1;
 }
+
+.pools {
+    position: relative;
+
+    & .trash {
+        position: absolute;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #f008;
+
+        pointer-events: none;
+
+        & .queue-trash {
+            font-size: 3em;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
