--- a/src/graphics/components/bar.scss
+++ b/src/graphics/components/bar.scss
@@ -37,16 +37,21 @@
     & .announcement {
         text-align: center;
         width: 10px;
+        height: fit-content;
         flex-grow: 1;
         flex-shrink: 1;
         position: relative;
         overflow: hidden;
 
-        &>div>div {
-            display: -webkit-box !important;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
+        & .text {
+            // display: -webkit-box !important;
+            // -webkit-line-clamp: 3;
+            // -webkit-box-orient: vertical;
+            // overflow: hidden;
+
+            display: flex !important;
+            justify-content: center;
+            align-items: center;
         }
     }
 
@@ -58,4 +63,28 @@
         align-self: unset;
         margin: 0 5px;
     }
+}
+
+
+.fade-wait-leave {
+    opacity: 1;
+}
+
+.fade-wait-leave.fade-wait-leave-active {
+    opacity: 0;
+    transition: opacity 0.4s ease-in;
+}
+
+.fade-wait-enter {
+    opacity: 0;
+}
+
+.fade-wait-enter.fade-wait-enter-active {
+    opacity: 1;
+    /* Delay the enter animation until the leave completes */
+    transition: opacity 0.4s ease-in 0.6s;
+}
+
+.fade-wait-height {
+    // transition: height 0.6s ease-in-out;
 }
