--- a/src/dashboard/announcements/components/announcement.scss
+++ b/src/dashboard/announcements/components/announcement.scss
@@ -104,22 +104,6 @@ input.editable {
     visibility: visible;
 }
 
-@keyframes vert {
-    0% {
-        max-height: 0;
-    }
-
-    100% {
-        max-height: 5em;
-    }
-}
-
-.announcement {
-    animation-name: vert;
-    animation-duration: 0.15s;
-    animation-iteration-count: 1;
-}
-
 .pools {
     position: relative;
 
@@ -154,7 +138,16 @@ input.editable {
     flex-shrink: 0;
 }
 
+.line-clamp-1 {
+    display: -webkit-box !important;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 
+.h-0 {
+    height: 0;
+}
 
 .item-enter {
     opacity: 0;
@@ -164,7 +157,7 @@ input.editable {
 .item-enter-active {
     opacity: 1;
     max-height: 100px;
-    transition: opacity 500ms ease-in, max-height 500ms ease-in;
+    transition: opacity 250ms ease-in, max-height 250ms ease-in;
 }
 
 .item-exit {
