--- a/src/dashboard/announcements/components/announcement.scss
+++ b/src/dashboard/announcements/components/announcement.scss
@@ -14,6 +14,7 @@ svg {
     padding: 0.25em 0.5em;
 }
 
+
 .btn-primary {
     --bs-btn-disabled-border-color: gray !important;
     --bs-btn-disabled-bg: gray !important;
@@ -43,8 +44,11 @@ svg {
     border: var(--bs-border-color) var(--bs-border-width);
 }
 
+
 span.editable {
     cursor: pointer !important;
+    min-width: 3em;
+    align-self: baseline;
 
     &:hover {
         border-bottom: var(--bs-border-color) var(--bs-border-width) dotted;
@@ -61,14 +65,7 @@ span.editable {
     &:hover>svg {
         visibility: visible;
     }
-
-    &.priority {
-        min-width: 2em;
-        max-width: 5em;
-        flex-shrink: 0;
-    }
 }
-
 
 input.editable {
     font-size: inherit;
@@ -76,6 +73,22 @@ input.editable {
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.input-group {
+    width: unset;
+}
+
+.priority {
+    flex-shrink: 0;
+    flex-grow: 0;
+
+    & .input-group {
+        max-width: 8em;
+        flex-shrink: 0;
+        flex-grow: 0;
+    }
+}
+
 
 .addBtn {
     width: 100%;
@@ -100,11 +113,12 @@ input.editable {
         transform: translate(-50%, -50%);
         pointer-events: none;
     }
+
+    &:hover .addIcon {
+        visibility: visible;
+    }
 }
 
-.addBtn:hover .addIcon {
-    visibility: visible;
-}
 
 .pools {
     position: relative;
@@ -130,6 +144,7 @@ input.editable {
     }
 }
 
+
 .forbid {
     cursor: not-allowed;
 }
@@ -151,6 +166,7 @@ input.editable {
     height: 0;
 }
 
+
 .item-enter {
     opacity: 0;
     max-height: 0;
@@ -171,8 +187,4 @@ input.editable {
     opacity: 0;
     max-height: 0;
     transition: opacity 500ms ease-in, max-height 500ms ease-in;
-}
-
-.input-group {
-    width: unset;
 }
