--- a/src/graphics/components/bar.scss
+++ b/src/graphics/components/bar.scss
@@ -38,10 +38,12 @@
         text-align: center;
         width: 10px;
         height: fit-content;
+        max-height: 100%;
         flex-grow: 1;
         flex-shrink: 1;
         position: relative;
         overflow: hidden;
+
 
         & .text {
             // display: -webkit-box !important;
@@ -52,6 +54,7 @@
             display: flex !important;
             justify-content: center;
             align-items: center;
+            white-space: unset !important;
         }
     }
 
