--- a/src/dashboard/announcements/components/announcement.scss
+++ b/src/dashboard/announcements/components/announcement.scss
@@ -37,7 +37,7 @@ svg {
 }
 
 .pool {
-    min-height: 3em;
+    min-height: 1em;
 }
 
 .pool:empty {
@@ -95,17 +95,16 @@ input.editable {
     height: 0.5em;
 
     position: absolute;
-    bottom: -0.75em;
+    top: -0.75em;
     left: 0;
     z-index: 1000;
 
     cursor: pointer;
-    cursor: copy;
 
     & .addIcon {
         visibility: hidden;
         position: absolute;
-        height: 2em;
+        height: 4em;
         max-width: 100%;
         object-fit: contain;
         left: 50%;
