--- a/src/graphics/components/bar.scss
+++ b/src/graphics/components/bar.scss
@@ -32,13 +32,14 @@
     & h2 {
         font-weight: bold;
         color: var(--bs-emphasis-color);
+        margin-bottom: unset;
     }
 
     & .announcement {
         text-align: center;
         width: 10px;
         height: fit-content;
-        max-height: 100%;
+        // height: 100%;
         flex-grow: 1;
         flex-shrink: 1;
         position: relative;
@@ -55,6 +56,10 @@
             justify-content: center;
             align-items: center;
             white-space: unset !important;
+
+            &>div {
+                height: fit-content;
+            }
         }
     }
 
