Tabular (monospace) numbers for time & total

--- a/src/graphics/components/bar.scss
+++ b/src/graphics/components/bar.scss
@@ -1,3 +1,10 @@
+.tabnum {
+    font-variant: tabular-nums;
+    -moz-font-feature-settings: "tnum";
+    -webkit-font-feature-settings: "tnum";
+    font-feature-settings: "tnum"
+}
+
 .bar {
     width: 1920px;
     height: 70px;
