--- a/src/graphics/bar/bar.scss
+++ b/src/graphics/bar/bar.scss
@@ -42,7 +42,7 @@
         margin-bottom: unset;
     }
 
-    & .announcement {
+    & .ticker {
         text-align: center;
         width: 10px;
         height: fit-content;
