Drag and drog and accordion socials

--- a/src/dashboard/people-control/people.scss
+++ b/src/dashboard/people-control/people.scss
@@ -5,3 +5,12 @@
 .w-0 {
     width: 0 !important;
 }
+
+.person div.editable {
+    width: fit-content;
+}
+
+.accordion-body,
+.accordion-button {
+    padding: 0.5em;
+}
