--- a/src/dashboard/people-control/people.scss
+++ b/src/dashboard/people-control/people.scss
@@ -38,3 +38,11 @@
         padding: 0.1em 0.25em !important;
     }
 }
+
+.fill {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
