--- a/src/dashboard/people-control/people.scss
+++ b/src/dashboard/people-control/people.scss
@@ -1,3 +1,8 @@
+:root {
+    --transition-in-time: 0 !important;
+    --transition-out-time: 0 !important;
+}
+
 .h-0 {
     height: 0 !important;
 }
