Add back btn and styling

--- a/src/dashboard/xr18-control/xr18.scss
+++ b/src/dashboard/xr18-control/xr18.scss
@@ -9,24 +9,23 @@
 .mute-buttons {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5em;
-    margin: 0 0.5em;
+    align-items: stretch;
+    gap: 1em !important;
+    margin: 1em 0 !important;
+}
+
+.mute-buttons>.btn {
+    padding: 2rem !important;
+    flex-grow: 1;
+}
+
+.mute-indicator {
+    padding: 2em 0 !important;
 }
 
 @media (max-width: 576px) {
     .mute-buttons {
-        align-items: stretch;
         flex-wrap: nowrap;
         flex-direction: column;
-        gap: 1em !important;
-        margin-top: 1em !important;
-    }
-
-    .mute-buttons>.btn {
-        padding: 2rem !important;
-    }
-
-    .mute-indicator {
-        padding: 2em 0 !important;
     }
 }
