Add separate background graphic

--- a/src/graphics/bar/bar.scss
+++ b/src/graphics/bar/bar.scss
@@ -20,7 +20,7 @@
     padding-left: 15px;
     padding-right: 15px;
 
-    background-color: #351344;
+    // background-color: #351344;
     font-size: 36px;
 
     --bs-border-color: var(--bs-emphasis-color);
