--- a/src/graphics/overlay/components/people.scss
+++ b/src/graphics/overlay/components/people.scss
@@ -14,5 +14,13 @@
 .people-enter.people-enter-active {
     opacity: 1;
     /* Delay the enter animation until the leave completes */
-    transition: opacity 0.25s ease-in;
+    transition: opacity 0.25s ease-in 0.25s;
+}
+
+.fill {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
