--- a/src/graphics/overlay/components/people.scss
+++ b/src/graphics/overlay/components/people.scss
@@ -1,3 +1,7 @@
+.badge {
+    --bs-badge-font-weight: inherit !important;
+}
+
 .people-leave {
     opacity: 1;
 }
@@ -17,7 +21,18 @@
     transition: opacity 0.25s ease-in 0.25s;
 }
 
+.people-height {
+    transition: height 0.5s ease-in 0s;
+}
+
 .fill {
     position: absolute;
     inset: 0;
+}
+
+.pronouns {
+    font-size: 0.6em;
+    padding: 0.1em 0.3em;
+    border-radius: 0.375rem;
+    background: #8884;
 }
