--- a/src/graphics/overlay/overlay.graphic.scss
+++ b/src/graphics/overlay/overlay.graphic.scss
@@ -1,3 +1,9 @@
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: geometricPrecision;
+}
+
 #root {
     overflow: hidden;
 }
