--- a/src/graphics/overlay/components/people.scss
+++ b/src/graphics/overlay/components/people.scss
@@ -2,27 +2,32 @@
     --bs-badge-font-weight: inherit !important;
 }
 
-.people-leave {
+:root {
+    --enter-time: 0.4s;
+    --leave-time: 0.4s;
+}
+
+.fade-wait-leave {
     opacity: 1;
 }
 
-.people-leave.people-leave-active {
+.fade-wait-leave.fade-wait-leave-active {
     opacity: 0;
-    transition: opacity 0.25s ease-in;
+    transition: opacity var(--leave-time) ease-in;
 }
 
-.people-enter {
+.fade-wait-enter {
     opacity: 0;
 }
 
-.people-enter.people-enter-active {
+.fade-wait-enter.fade-wait-enter-active {
     opacity: 1;
     /* Delay the enter animation until the leave completes */
-    transition: opacity 0.25s ease-in 0.25s;
+    transition: opacity var(--enter-time) ease-in var(--leave-time);
 }
 
-.people-height {
-    transition: height 0.5s ease-in 0s;
+.fade-wait-height {
+    transition: height calc(var(--enter-time) + var(--leave-time)) ease-in-out;
 }
 
 .fill {
