--- a/src/graphics/overlay/overlay.graphic.scss
+++ b/src/graphics/overlay/overlay.graphic.scss
@@ -1,3 +1,12 @@
+* {
+    flex-shrink: 0;
+    flex-grow: 0;
+    min-width: 0;
+    min-height: 0;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -24,17 +33,7 @@ body {
     text-wrap: balance;
 }
 
-#game {
-    flex-shrink: 0 !important;
-}
-
-.noflow {
-    flex: 1 1 0;
-    min-height: 0;
-    min-width: 0;
-}
-
-.wrapouter>div {
-    @extend .noflow;
-    height: 100%;
+.flex-gs {
+    flex-grow: 1;
+    flex-shrink: 1;
 }
