Make margins a lot more sane

--- a/src/graphics/overlay/overlay.graphic.scss
+++ b/src/graphics/overlay/overlay.graphic.scss
@@ -19,7 +19,7 @@ body {
 
 .outer {
     --offset: calc(0.5 * var(--bw));
-    margin: var(--offset) var(--offset) 0 var(--offset)
+    // margin: var(--offset) var(--offset) 0 var(--offset)
 }
 
 .tabnum {
