--- a/src/graphics/overlay/components/cam.scss
+++ b/src/graphics/overlay/components/cam.scss
@@ -8,9 +8,15 @@
     // border: var(--bs-body-color) solid calc(2 * var(--bw));
 }
 
-.centred-border {
+// .centred-border {
+//     border: var(--bs-body-color) solid var(--bw);
+//     position: absolute;
+//     inset: calc(-0.5 * var(--bw));
+//     overflow: hidden;
+// }
+
+
+.cam-inner {
+    box-sizing: content-box;
     border: var(--bs-body-color) solid var(--bw);
-    position: absolute;
-    inset: calc(-0.5 * var(--bw));
-    overflow: hidden;
 }
