Fuck with the formatting yet more

--- a/src/graphics/overlay/overlay.graphic.scss
+++ b/src/graphics/overlay/overlay.graphic.scss
@@ -37,3 +37,10 @@ body {
     flex-grow: 1;
     flex-shrink: 1;
 }
+
+.textfit {
+    display: flex !important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
