--- a/src/wasd/graphics/bar/bar.scss
+++ b/src/wasd/graphics/bar/bar.scss
@@ -5,6 +5,12 @@
     font-feature-settings: "tnum"
 }
 
+.animText>span,
+.animText>span div {
+    display: block;
+    height: 67px;
+}
+
 .bar {
     width: 1920px;
     height: 70px;
@@ -22,6 +28,8 @@
 
     // background-color: #351344;
     font-size: 32px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
 
     --bs-border-color: var(--bs-emphasis-color);
 
@@ -36,22 +44,22 @@
         padding: 10px 0;
     }
 
-    & h2 {
+    & span {
         font-weight: bold;
         color: var(--bs-emphasis-color);
         margin-bottom: unset;
-        font-size: 32px;
+        line-height: 1;
     }
 
     & .ticker {
         text-align: center;
         width: 10px;
         height: fit-content;
-        // height: 100%;
+        max-height: 100%;
         flex-grow: 1;
         flex-shrink: 1;
         position: relative;
-        overflow: hidden;
+        // overflow: hidden;
 
 
         & .text {
@@ -67,6 +75,7 @@
 
             &>div {
                 height: fit-content;
+                max-height: 67px;
             }
         }
     }
@@ -102,5 +111,5 @@
 }
 
 .fade-wait-height {
-    // transition: height 0.6s ease-in-out;
+    transition: height 0.4s ease-in-out 0.6s;
 }
