Clean up up next slide

--- a/src/wasd/graphics/break/components/slides.scss
+++ b/src/wasd/graphics/break/components/slides.scss
@@ -7,6 +7,12 @@
     border-radius: 15px;
     flex-grow: 0 !important;
     font-size: 0.9em;
+    background-color: transparent;
+}
+
+h1 {
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 h2 {
