--- a/src/wasd/graphics/bar/bar.scss
+++ b/src/wasd/graphics/bar/bar.scss
@@ -5,12 +5,6 @@
     font-feature-settings: "tnum"
 }
 
-.animText>span,
-.animText>span div {
-    display: block;
-    height: 67px;
-}
-
 .bar {
     width: 1920px;
     height: 70px;
@@ -52,22 +46,28 @@
         line-height: 1;
     }
 
-    & .ticker {
+
+    & .tickerouter {
         text-align: center;
+        flex: 1 1 10px;
         width: 10px;
-        height: fit-content;
-        max-height: 100%;
         flex-grow: 1;
         flex-shrink: 1;
         position: relative;
-        // overflow: hidden;
+        height: 60px;
+    }
 
+    & .ticker {
+        position: absolute;
+        width: 100%;
+        height: 60px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         & .text {
-            // display: -webkit-box !important;
-            // -webkit-line-clamp: 3;
-            // -webkit-box-orient: vertical;
-            // overflow: hidden;
+            height: 60px;
+            position: relative;
 
             display: flex !important;
             justify-content: center;
@@ -78,7 +78,6 @@
 
             &>div {
                 height: fit-content;
-                max-height: 55px;
             }
 
             &>div>span {
@@ -96,31 +95,6 @@
         margin: 0 5px;
     }
 }
-
-
-// .fade-wait-leave {
-//     opacity: 1;
-// }
-
-// .fade-wait-leave.fade-wait-leave-active {
-//     opacity: 0;
-//     transition: opacity 0.4s ease-in;
-// }
-
-// .fade-wait-enter {
-//     opacity: 0 !important;
-// }
-
-// .fade-wait-enter.fade-wait-enter-active {
-//     opacity: 1 !important;
-//     /* Delay the enter animation until the leave completes */
-//     transition: opacity 1s linear 0.6s;
-//         -webkit-transition: opacity 1s linear 0.6s;
-// }
-
-// .fade-wait-height {
-//     transition: height 0.4s ease-in-out 0.6s;
-// }
 
 :root {
     --enter-time: 0.4s;
