--- a/src/common/uwcs-bootstrap.css
+++ b/src/common/uwcs-bootstrap.css
@@ -46,6 +46,13 @@
     overflow: hidden;
 }
 
+.line-clamp-2 {
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 .tabnum {
     font-variant: tabular-nums;
     -moz-font-feature-settings: "tnum";
