--- a/src/wasd/graphics/break/components/song.scss
+++ b/src/wasd/graphics/break/components/song.scss
@@ -1,7 +1,8 @@
 .song-outer {
-    width: 90%;
-    background-color: #2228;
-    border-radius: 7px;
+    width: 100%;
+    // background-color: #2228;
+    // border-radius: 7px;
+    padding: 0 !important;
 }
 
 .song {
@@ -9,13 +10,15 @@
     flex-direction: row;
     align-items: center;
 
-    padding: 15px;
+    // padding: 15px;
     padding-right: none;
 
     & .art {
-        width: 100px;
-        height: 100px;
-        border-radius: 7px;
+        max-width: 150px;
+        min-height: 150px;
+        height: 100%;
+        aspect-ratio: 1 / 1;
+        // border-radius: 7px;
         overflow: hidden;
 
         & img {
@@ -55,6 +58,7 @@
 }
 
 
+
 .fade-wait-leave {
     opacity: 1;
     transform: translateX(0);
@@ -80,5 +84,5 @@
 }
 
 .fade-wait-height {
-    transition: height 1s ease-in-out;
+    transition: height calc(2 * var(--anim-time)) ease-in-out;
 }
