Add markdown for ticker values

--- a/src/common/components/editable.scss
+++ b/src/common/components/editable.scss
@@ -23,6 +23,10 @@ div.editable:not(.input) {
     &:hover>svg.icon {
         visibility: visible;
     }
+
+    & img {
+        height: 1em;
+    }
 }
 
 .editable-outer {
